--- a/frontend/src/components/common/country.styles.css
+++ b/frontend/src/components/common/country.styles.css
@@ -6,3 +6,12 @@
   width: 300px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+.card-country-name {
+  color: black;
+  text-decoration: none;
+}
+
+.card-country-name:hover {
+  color: rgba(75,192,192,1);
+}
