check for 404 error for countries-now api

--- a/frontend/src/components/country-info/country-info.styles.css
+++ b/frontend/src/components/country-info/country-info.styles.css
@@ -17,13 +17,11 @@
   align-items: center;
 }
 
-.borders-container,
-.population-container {
+.container {
   padding: 20px;
 }
 
-.borders-title,
-.population-title {
+.title {
   font-size: 24px;
   font-weight: 700;
 }
