--- a/frontend/src/components/common/country.styles.css
+++ b/frontend/src/components/common/country.styles.css
@@ -3,15 +3,19 @@
   flex-direction: column;
   padding: 20px;
   gap: 10px;
-  width: 300px;
+  width: 280px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: white;
 }
 
-.card-country-name {
+.card-country {
   color: black;
   text-decoration: none;
+  transition: transform 0.3s ease;
+  transition: color 0.3s ease;
 }
 
-.card-country-name:hover {
+.card-country:hover {
   color: rgba(75, 192, 192, 1);
+  transform: scale(1.03);
 }
