--- a/frontend/src/components/country-info/country-info.styles.css
+++ b/frontend/src/components/country-info/country-info.styles.css
@@ -1,4 +1,5 @@
 .country-info-container {
+  box-sizing: border-box;
   padding: 50px;
   background-color: #fafbfc;
   min-height: 100vh;
@@ -40,4 +41,21 @@
 .common-info {
   display: flex;
   gap: 20px;
+}
+
+.button {
+  box-sizing: border-box;
+  margin-left: auto;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 40px;
+  border: 1px solid rgba(75,192,192,1);
+  color: rgba(75,192,192,1);
+  padding: 10px 20px;
+  height: 48px;
+  min-width: 200px;
+}
+
+.button:hover {
+  background-color: rgba(75,192,192,0.1);
 }
