--- a/frontend/src/components/common/country/country.styles.css
+++ b/frontend/src/components/common/country/country.styles.css
@@ -4,18 +4,18 @@
   padding: 20px;
   gap: 10px;
   width: 280px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px var(--transparent-black-10);
   background-color: white;
 }
 
 .card-country {
-  color: black;
+  color: var(--black);
   text-decoration: none;
   transition: transform 0.3s ease;
   transition: color 0.3s ease;
 }
 
 .card-country:hover {
-  color: rgba(75, 192, 192, 1);
+  color: var(--teal);
   transform: scale(1.03);
 }
