--- a/frontend/src/components/common/loader/loader.styles.css
+++ b/frontend/src/components/common/loader/loader.styles.css
@@ -9,8 +9,8 @@
 .spinner {
   width: 50px;
   height: 50px;
-  border: 6px solid #ccc;
-  border-top: 6px solid rgba(75, 192, 192, 1);
+  border: 6px solid var(--medium-gray);
+  border-top: 6px solid var(--teal);
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
