--- a/frontend/src/components/country-info/country-info.styles.css
+++ b/frontend/src/components/country-info/country-info.styles.css
@@ -1,7 +1,7 @@
 .country-info-container {
   box-sizing: border-box;
   padding: 50px;
-  background-color: #fafbfc;
+  background-color: var(--light-gray);
   min-height: 100vh;
 }
 
@@ -21,7 +21,7 @@
   display: flex;
   gap: 20px;
   align-items: center;
-  border-bottom: 1px solid #e8e9eb;
+  border-bottom: 1px solid var(--gray-background);
 }
 
 .container {
@@ -49,13 +49,13 @@
   text-decoration: none;
   text-align: center;
   border-radius: 40px;
-  border: 1px solid rgba(75,192,192,1);
-  color: rgba(75,192,192,1);
+  border: 1px solid var(--teal);
+  color: var(--teal);
   padding: 10px 20px;
   height: 48px;
   min-width: 200px;
 }
 
 .button:hover {
-  background-color: rgba(75,192,192,0.1);
+  background-color: var(--transparent-teal-10);
 }
