--- a/frontend/src/components/country-info/country-info.styles.css
+++ b/frontend/src/components/country-info/country-info.styles.css
@@ -1,6 +1,6 @@
 .country-info-container {
   box-sizing: border-box;
-  padding: 50px;
+  padding: 20px;
   background-color: var(--light-gray);
   min-height: 100vh;
 }
@@ -12,7 +12,7 @@
 }
 
 .country-name {
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 700;
 }
 
@@ -20,8 +20,15 @@
   padding: 20px;
   display: flex;
   gap: 20px;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
   border-bottom: 1px solid var(--gray-background);
+}
+
+.country-header {
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
 .container {
@@ -45,7 +52,6 @@
 
 .button {
   box-sizing: border-box;
-  margin-left: auto;
   text-decoration: none;
   text-align: center;
   border-radius: 40px;
@@ -58,4 +64,21 @@
 
 .button:hover {
   background-color: var(--transparent-teal-10);
+}
+
+@media screen and (min-width: 992px) {
+  .header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .country-info-container {
+    padding: 50px;
+  }
+  .country-name {
+    font-size: 40px;
+  }
 }
