--- a/frontend/src/components/common/error/error-display.styles.css
+++ b/frontend/src/components/common/error/error-display.styles.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: calc(100vh - 40px);
   width: 100%;
 }
 
@@ -25,4 +25,10 @@
   font-size: 1rem;
   color: var(--dark-gray);
   margin: 0;
+}
+
+@media screen and (min-width: 600px) {
+  .error-container {
+    height: calc(100vh - 100px);
+  }
 }
